@@ -1,6 +1,5 @@
 ==To-Do==
 * Implement daisy chain device removal (when port and connector are of the same kind)
-* Fix hardware library detail view filtering
 * Fix [CanvasView update] recursion
 
 * Add OESound:resampling, rendering to audio buffer
