@@ -1,0 +1,25 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE edl PUBLIC "-//OPENEMULATOR//DTD EDL 1.0//EN" "http://www.openemulator.org/DTD/edl-1.0.dtd">
+<edl version="1.0" label="Apple Disk III" image="images/Apple/Apple Disk III.png" description="The Disk III Floppy Disk Subsystem is a 5¼-inch floppy disk drive designed for the Apple III computer.">
+
+<device id="appleDiskIII" label="Apple Disk III" image="images/Apple/Apple Disk III.png">
+    <setting ref="appleDiskIII.io" name="lock" label="Force Write Protected" type="checkbox"/>
+    <setting ref="appleDiskIII.io" name="sounds" label="Drive Mechanism" type="select" options="Shugart,Alps"/>
+</device>
+<connector id="appleDiskIII.connector" type="Apple Disk Drive Port">
+</connector>
+<port id="appleDiskIII.port" ref="" type="Apple Disk Drive Port" group="peripherals" label="" image="images/Connectors/Rectangular2x13 Male.png">
+</port>
+<component id="appleDiskIII.drive" class="AppleDiskII">
+    <property name="device" ref="appleDiskIII"/>
+    <property name="image" value=""/>
+    <property name="lock" value="0"/>
+    <property name="rpm" value="300.0"/>
+    <property name="rpmVariance" value="1.0"/>
+    <property name="soundSpin" src="${resourcePath}/sounds/Apple Disk II Spin.wav"/>
+    <property name="soundArm" src="${resourcePath}/sounds/Apple Disk II Arm.wav"/>
+    <property name="soundStop" src="${resourcePath}/sounds/Apple Disk II Stop.wav"/>
+    <property name="soundShake" src="${resourcePath}/sounds/Apple Disk II Shake.wav"/>
+</component>
+
+</edl>
