@@ -1,4 +1,5 @@
 ==2011-07==
+* Fixed hardware library detail view filtering
 * Improved portaudio latency
 * Fixed brigthness in monochrome
 * Implemented device replacement by dragging
